# java_sandbox

./: .editorconfig  .gitignore  README.md  build.gradle  lombok.config
c-sandbox/: .clang-format  template.c  test.c
c-sandbox/01basics/: 01main.c  02forward-declaration.c  03user-input.c  04data-types.c  05type-promotions.c  06type-conversion.c  07type-casting.c  08boolean-type.c  09constants.c  10format.c  11boolean.c  12unary-op.c  13ternary-op.c  14sizeof.c  15misc-op.c  16if-else.c  17switch.c  18loops.c  19loops2.c  20loop3.c  test.txt
c-sandbox/02functions/: 00base.c  01by-value.c  02by-reference.c  03variadic-func.c  04callback-func.c  05callback-func2.c  07return.c  08recursion.c  09inline-func.c  10nested-func.c
cpp-sandbox/: .clang-format  info.txt  test  test.cpp  tests01.cpp
go-sandbox/: go.mod  test.go
haskell-sandbox/: .fourmolu.yaml  fourmolu.yaml
http/: http-client.env.json  test.http  test.uat.json  test.uat.response.json  test.uat.xml
js-sandbox/: test.js  test.ts
lua-sandbox/: README.md  buffer_test.lua  javadoc_test.lua  test.lua  test_split.lua
python-sandbox/: 00.01_tests.py  file.txt  myfile.txt  tests.py  what-platform.py
python-sandbox/deps-management/poetry/: pyproject.toml
rust-sandbox/: Cargo.toml  info.txt  test  test.rs
rust-sandbox/tests/: Cargo.toml  Makefile  README.md  rustfmt.toml
rust-sandbox/tests/.config/: nextest.toml
rust-sandbox/tests/benches/: math_bench.rs  strings_bench.rs
rust-sandbox/tests/fuzz/: Cargo.toml
rust-sandbox/tests/fuzz/fuzz_targets/: parse_fuzz.rs  reverse_fuzz.rs
rust-sandbox/tests/src/: async_utils.rs  bank.rs  collections.rs  lib.rs  main.rs  math.rs  parser.rs  services.rs  shapes.rs  strings.rs
rust-sandbox/tests/src/units/: .snapshot_tests.rs.pending-snap  async_tests.rs  bank_tests.rs  collections_tests.rs  math_tests.rs  mock_tests.rs  mod.rs  parametrized_tests.rs  parser_tests.rs  proptest_tests.rs  quickcheck_tests.rs  rstest_advanced_tests.rs  shapes_tests.rs  snapshot_tests.rs  strings_tests.rs  test_case_matchers_tests.rs
rust-sandbox/tests/tests/: bank_integration.rs  collections_integration.rs  math_integration.rs  parametrized_integration.rs  parser_integration.rs  shapes_integration.rs  strings_integration.rs  trybuild_tests.rs
rust-sandbox/tests/tests/common/: mod.rs
rust-sandbox/tests/tests/ui/: pass_basic.rs  pass_iter.rs
shell-sandbox/: 00.1_commandOperators.sh  02.0_arrays.sh  02.1_arrays.sh  02.2_arrays.sh  07.0_fileTestOperators.sh  08.0_decisionMaking.sh  10.0_loops.sh  10.1_loops.sh  10.2_loops.sh  12.0_substitution.sh  12.2_checkIfVariableSet.sh  14.1_hereDocument.sh  14.2_readFiles.sh  14.3_writeFiles.sh  14.4_checkIfFileExists.sh  15.0_functions.sh  17.0_date.sh  20.1_stringLengthSplit.sh  20.3_stringContains.sh  README.md  next_deploy_if_exists.sh  params.sh  tests.sh
testfiles/: file1.txt  file2.txt  file_2024-05-29.txt  testpasswd  users  usersw
(+975 files in other folders)
