[package]
name = "test1"
version = "0.1.0"
edition = "2021"

[lib]
name = "test1"
path = "src/lib.rs"

[[bin]]
name = "test1"
path = "src/main.rs"

[[bench]]
name = "math_bench"
harness = false

[[bench]]
name = "strings_bench"
harness = false

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }

[dev-dependencies]
rstest          = { version = "0.23", features = ["async-timeout"] }
test-case       = "3.3"
proptest        = "1"
quickcheck      = "1"
quickcheck_macros = "1"
insta           = { version = "1", features = ["yaml", "json"] }
tokio           = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "test-util"] }
mockall         = "0.13"
trybuild        = "1"
criterion       = { version = "0.5", features = ["html_reports"] }
async-std       = { version = "1", features = ["attributes"] }
futures         = "0.3"
